fix z-index (offerings button)

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -18,6 +18,9 @@
     background-position: bottom;
     padding-top: 15px;
     padding-bottom: 40px;
+
+    position: relative;
+    z-index: 1;
   }
 
   & .container {
