--- a/src/sass/components/_offerings.scss
+++ b/src/sass/components/_offerings.scss
@@ -20,7 +20,6 @@
     background-color: $yellow-main;
     margin-top: -35px;
     position: relative;
-    z-index: -1;
   }
 
   &--flex {
